5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1773_2108.log
== TEST (2019-05-27 22:04:34) 
-- CODE:
from numpy import *
string = input("digite a string: ")
copy = ""
i = 0
while(i<len(string)):
	if(string[i]=="A"):
		copy = copy + string[i]
	elif(string[i]=="E"):
		copy = copy + string[i]
	elif(string[i]=="I"):
		copy = copy + string[i]
	elif(string[i]=="O"):
		copy = copy + string[i]
	elif(string[i]=="U"):
		copy = copy + string[i]
	elif(string[i]=="a"):
		copy = copy + string[i]
	elif(string[i]=="e"):
		copy = copy + string[i]
	elif(string[i]=="i"):
		copy = copy + string[i]
	elif(string[i]=="o"):
		copy = copy + string[i]
	elif(string[i]=="u"):
		copy = copy + string[i]
	else:
		copy = copy + "p"
	i = i + 1
print(copy)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:05:34) 
-- CODE:
from numpy import *
string = input("digite a string: ")
copy = ""
i = 0
while(i<len(string)):
	if(string[i]=="A"):
		copy = copy + string[i]
	elif(string[i]=="E"):
		copy = copy + string[i]
	elif(string[i]=="I"):
		copy = copy + string[i]
	elif(string[i]=="O"):
		copy = copy + string[i]
	elif(string[i]=="U"):
		copy = copy + string[i]
	elif(string[i]=="a"):
		copy = copy + string[i]
	elif(string[i]=="e"):
		copy = copy + string[i]
	elif(string[i]=="i"):
		copy = copy + string[i]
	elif(string[i]=="o"):
		copy = copy + string[i]
	elif(string[i]=="u"):
		copy = copy + string[i]
	elif(string[i] == " ")
		copy = copy + " "
	else:
		copy = copy + "p"
	i = i + 1
print(copy)

-- ERROR:
File "XXXX", line 26
    elif(string[i] == " ")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:05:54) 
-- CODE:
from numpy import *
string = input("digite a string: ")
copy = ""
i = 0
while(i<len(string)):
	if(string[i]=="A"):
		copy = copy + string[i]
	elif(string[i]=="E"):
		copy = copy + string[i]
	elif(string[i]=="I"):
		copy = copy + string[i]
	elif(string[i]=="O"):
		copy = copy + string[i]
	elif(string[i]=="U"):
		copy = copy + string[i]
	elif(string[i]=="a"):
		copy = copy + string[i]
	elif(string[i]=="e"):
		copy = copy + string[i]
	elif(string[i]=="i"):
		copy = copy + string[i]
	elif(string[i]=="o"):
		copy = copy + string[i]
	elif(string[i]=="u"):
		copy = copy + string[i]
	elif(string[i] == " "):
		copy = copy + " "
	else:
		copy = copy + "p"
	i = i + 1
print(copy)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 22:06:03) 
-- CODE:
from numpy import *
string = input("digite a string: ")
copy = ""
i = 0
while(i<len(string)):
	if(string[i]=="A"):
		copy = copy + string[i]
	elif(string[i]=="E"):
		copy = copy + string[i]
	elif(string[i]=="I"):
		copy = copy + string[i]
	elif(string[i]=="O"):
		copy = copy + string[i]
	elif(string[i]=="U"):
		copy = copy + string[i]
	elif(string[i]=="a"):
		copy = copy + string[i]
	elif(string[i]=="e"):
		copy = copy + string[i]
	elif(string[i]=="i"):
		copy = copy + string[i]
	elif(string[i]=="o"):
		copy = copy + string[i]
	elif(string[i]=="u"):
		copy = copy + string[i]
	elif(string[i] == " "):
		copy = copy + " "
	else:
		copy = copy + "p"
	i = i + 1
print(copy)

-- EXECUTION TIME:
0.323337
-- TEST CASE 1:
---- input:
teste
---- correct output:
peppe
---- user output:
peppe
-- TEST CASE 2:
---- input:
flor
---- correct output:
ppop
---- user output:
ppop
-- TEST CASE 3:
---- input:
abacaxi
---- correct output:
apapapi
---- user output:
apapapi
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
